@@ -3,8 +3,13 @@
 use warnings;
 use strict;
 
-use Test::More tests => 2;
+use Test::More;
+if ( $ENV{NO_INTERNET} ) {
+    plan skip_all => "No internet during package build";
+}
+else {
+    plan tests => 2;
+}
 use Test::clive;
 
-Test::clive::host( qq|http://vimeo.com/1485507|, "-f $_" )
-    foreach qw(flv hd);
+Test::clive::host( qq|http://vimeo.com/1485507|, "-f $_" ) foreach qw(flv hd);
